finish crud operation

--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,7 @@
 
         #body button {
             cursor: pointer;
+            background: lightblue;
         }
 
         #body .button-container {
@@ -60,7 +61,7 @@
     </div>
     <footer id="footer">(C) Salesforce blogs</footer>
     </div>
-    <script type="text/javascript" src="/dist/app.bundle.js"></script>
+    <script type="text/javascript" src="/dist/app.bundle.js"></script> 
 </body>
 
 </html>
